Refactor database connection configuration and add drug-related models, repository, service, and controller

--- a/API/Elasticsearch.WEB/appsettings.Development.json
+++ b/API/Elasticsearch.WEB/appsettings.Development.json
@@ -4,6 +4,10 @@
     "Username": "elastic",
     "Password": "changeme"
   },
+  "ConnectionStrings": {
+    "SqlConnection": "Server=127.0.0.1,1433;Database=MEDICAL;User Id=sa;Password=Password12*;Encrypt=false;"
+  },
+  "ActiveConnection": "SqlConnection",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
